Fix register page text left alignment

--- a/app/trial/TrialForm.module.css
+++ b/app/trial/TrialForm.module.css
@@ -26,6 +26,7 @@
   margin-bottom: 16px;
   font-weight: 500;
   line-height: 1.5;
+  text-align: left;
 }
 
 .trialForm {
